# verizon-apis-python-sdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/auth/: custom-header-signature.md  oauth-2-client-credentials-grant.md
doc/controllers/: 5g-bi-device-actions.md  5g-edge-platforms.md  account-devices.md  account-requests.md  account-subscriptions.md  accounts.md  anomaly-settings.md  anomaly-triggers-v2.md  anomaly-triggers.md  billing.md  campaigns-v2.md  campaigns-v3.md  client-logging.md  cloud-connector-devices.md  cloud-connector-subscriptions.md  configuration-files.md  connectivity-callbacks.md  csp-profiles.md  device-actions.md  device-diagnostics.md  device-groups.md  device-location-callbacks.md  device-management.md  device-monitoring.md  device-profile-management.md  device-reports.md  device-service-management.md  device-sms-messaging.md  devices-location-subscriptions.md  devices-locations.md  diagnostics-callbacks.md  diagnostics-factory-reset.md  diagnostics-history.md  diagnostics-observations.md  diagnostics-settings.md  diagnostics-subscriptions.md  e-uicc-device-profile-management.md  exclusions.md  firmware-v1.md  firmware-v3.md  (+46 more)
doc/models/: 5g-bi-address.md  5g-bi-carrier-information.md  5g-bi-customer-name.md  5g-bi-request-response.md  5g-bi-rest-error-response-exception.md  5g-biaccount-nameobject.md  5g-biactivate-request.md  5g-biattribute-1.md  5g-biattribute-2.md  5g-bichange-request.md  5g-bidevice-detailsresponse.md  5g-bidevice-id-1.md  5g-bidevice-idarray.md  5g-bikey-value-1.md  a-request-body-for-usage.md  acceleration.md  access-intents.md  access-key.md  account-consent-create.md  account-consent-update.md  account-details.md  account-device-list-filter.md  account-device-list-request.md  account-device-list-result.md  account-device-list.md  account-identifier.md  account-labels.md  account-lead.md  account-leads-result.md  account-license-device-list-item.md  account-license-info.md  account-service.md  account-states-and-services.md  account.md  activate-device-profile-request.md  add-devices-request.md  add-devices-result.md  address-item.md  address.md  addressquery.md  (+526 more)
tests/: http_response_catcher.py
tests/controllers/: controller_test_base.py  test_exclusions_controller.py  test_thing_space_quality_of_service_api_actions_controller.py
verizon/: __init__.py  configuration.py  verizon_client.py
verizon/controllers/: __init__.py  account_devices_controller.py  account_requests_controller.py  account_subscriptions_controller.py  accounts_controller.py  anomaly_settings_controller.py  anomaly_triggers_controller.py  anomaly_triggers_v2_controller.py  base_controller.py  (+79 more)
verizonthingspacequalityofserviceapiendpoints/: __init__.py  api_helper.py  configuration.py  verizonthingspacequalityofserviceapiendpoints_client.py
(+807 files in other folders)
