[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "sdksio-verizon-apis-sdk"
description = "Use the Verizon API for connectivity management, device diagnostics, device location, edge discovery service, edge performance, software management and much more."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["verizon", "5gedge", "thingspace"]
authors = [{name = "developer-sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://www.verizon.com/business/5g-edge-portal/api-documentation.html"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10", "deprecation~=2.1"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
