[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "sdksio-verizon-apis-sdk"
description = "Use the Verizon API for connectivity management, device diagnostics, device location, edge discovery service, edge performance, software management and much more."
version = "1.6.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["API", "SDK", "Verizon", "Thingspace"]
authors = [{name = "developer-sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://www.verizon.com/business/5g-edge-portal/api-documentation.html"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.15", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
